# claudes-c-compiler

./: Cargo.toml  DESIGN_DOC.md  LOCK  README.md
.cargo/: config.toml
completed_tasks/: division_by_constant_strength_reduction.txt  fix_always_inline_block_limit.txt  fix_braces_around_scalar_struct_init.md  fix_int128_unary_ops_and_incdec.md  fix_ipcp_non_static_const_propagation.txt  fix_pic_jump_tables_arm_riscv.txt  fix_riscv_inline_asm_regalloc_stack_spill.txt  implement_inline_asm_x86_riscv.txt  inline_small_static_functions.txt
current_tasks/: add_aesni_clmul_sse_intrinsics.txt  add_global_dead_store_elimination.txt  add_i686_peephole_optimizer.txt  add_i686_test_expected_outputs.txt  add_iquote_isystem_idirafter_flags.txt  add_missing_arch_predefined_macros.txt  add_redis_neon_u32_u64_intrinsics.txt  add_riscv_caller_saved_regalloc.txt  add_riscv_compressed_instructions.txt  add_sse2_cast_intrinsics_for_flatcc.txt  add_werror_wall_wno_flags.txt  arm_riscv_peephole_optimizer.txt  cache_liveness_in_codegen.txt  caller_saved_register_allocation.txt  cleanup_arch_codegen_boilerplate.txt  cleanup_arm_linker_dedup.txt  cleanup_wrong_self_convention.txt  consolidate_function_meta.txt  dead_code_and_simplification_cleanup.txt  dedup_backend_codegen_methods.txt  dedup_emit_cast_and_return.txt  dedup_i128_float_sse_codegen.txt  dedup_inline_asm_backends.txt  deduplicate_passes_and_ir_cleanup.txt  eliminate_token_clone_overhead.txt  eliminate_unused_callee_saves.txt  encapsulate_driver_fields.txt  extract_x86_f128_module.txt  fix_aarch64_large_stack_offset.txt  (+384 more)
(+359 files in other folders)
