[package]
name = "ccc"
version = "0.1.0"
edition = "2021"
description = "A C compiler targeting x86-64, i686, ARM64, and RISC-V"
autobins = false

[[bin]]
name = "ccc"
path = "src/main.rs"

[[bin]]
name = "ccc-x86"
path = "src/bin/ccc_x86.rs"

[[bin]]
name = "ccc-arm"
path = "src/bin/ccc_arm.rs"

[[bin]]
name = "ccc-riscv"
path = "src/bin/ccc_riscv.rs"

[[bin]]
name = "ccc-i686"
path = "src/bin/ccc_i686.rs"

